--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ matrix:
     - php: 5.5
       env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*'
     - php: 5.5
+      env: SYMFONY_VERSION='2.3.* sensio/framework-extra-bundle:2.*'
+    - php: 5.5
       env: SYMFONY_VERSION=2.4.*
     - php: 5.5
       env: SYMFONY_VERSION=2.6.*
