--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+request_body_param_converter:
+    path:     /body-converter
+    defaults: { _controller: TestBundle:RequestBodyParamConverter:putPost }
+
 test_serializer_error_exception:
     path:     /serializer-error/exception.{_format}
     defaults: { _controller: TestBundle:SerializerError:exception }
