--- a/composer.json
+++ b/composer.json
@@ -40,13 +40,13 @@
         "symfony/browser-kit":            "~2.3",
         "symfony/dependency-injection":   "~2.3",
         "phpoption/phpoption":            "~1.1.0",
-        "jms/serializer":                 "~0.13",
-        "jms/serializer-bundle":          "~0.12"
+        "jms/serializer":                 "~0.13|~1.0",
+        "jms/serializer-bundle":          "~0.12|~1.0"
     },
 
     "suggest": {
         "sensio/framework-extra-bundle":  "Add support for route annotations and the view response listener, requires ~3.0",
-        "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires ~0.12",
+        "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires ~0.12||~1.0",
         "symfony/serializer":             "Add support for basic serialization capabilities and xml decoding, requires ~2.3",
         "symfony/validator":              "Add support for validation capabilities in the ParamFetcher, requires ~2.3"
     },
