--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ php:
   - nightly
   - hhvm
 
+sudo: false
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 branches:
   only:
     - master
@@ -17,7 +23,7 @@ matrix:
   fast_finish: true
   include:
     - php: 5.3
-      env: deps="low"
+      env: SYMFONY_VERSION=2.3.* COMPOSER_FLAGS="--prefer-lowest"
     - php: 5.5
       env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*'
     - php: 5.5
@@ -33,11 +39,11 @@ matrix:
   allow_failures:
     - php: nightly
 
-before_script:
+before_install:
   - composer self-update
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
-  - if [ "$deps" = "low" ]; then composer update --prefer-lowest; fi
-  - if [ "$deps" != "low" ]; then composer update --prefer-source; fi
+
+install: composer update $COMPOSER_FLAGS --prefer-dist
 
 script: phpunit --coverage-clover=coverage.clover
 
