--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
-  - nightly
+  - 7.0
   - hhvm
 
 sudo: false
@@ -22,22 +21,10 @@ branches:
 matrix:
   fast_finish: true
   include:
-    - php: 5.3
-      env: SYMFONY_VERSION=2.3.* COMPOSER_FLAGS="--prefer-lowest"
-    - php: 5.5
-      env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*'
-    - php: 5.5
-      env: SYMFONY_VERSION='2.3.* sensio/framework-extra-bundle:2.*'
-    - php: 5.5
-      env: SYMFONY_VERSION=2.4.*
-    - php: 5.5
-      env: SYMFONY_VERSION=2.6.*
-    - php: 5.5
-      env: SYMFONY_VERSION='2.7.*'
+    - php: 5.4
+      env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 5.5
       env: SYMFONY_VERSION='2.8.*@dev symfony/security-acl:2.8.*@dev'
-  allow_failures:
-    - php: nightly
 
 before_install:
   - composer self-update
@@ -48,5 +35,5 @@ install: composer update $COMPOSER_FLAGS --prefer-dist
 script: phpunit --coverage-clover=coverage.clover
 
 after_script:
-  - if [ "$TRAVIS_PHP_VERSION" != "nightly" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-  - if [ "$TRAVIS_PHP_VERSION" != "nightly" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+  - if [ "$TRAVIS_PHP_VERSION" != "7.0" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  - if [ "$TRAVIS_PHP_VERSION" != "7.0" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
