--- a/composer.json
+++ b/composer.json
@@ -21,51 +21,47 @@
     ],
 
     "require": {
-        "php":                            ">=5.3.9",
-        "psr/log":                        "~1.0",
-        "symfony/framework-bundle":       "~2.3",
-        "symfony/http-kernel":            "~2.3,>=2.3.24",
-        "doctrine/inflector":             "~1.0",
-        "willdurand/negotiation":         "~1.2",
-        "willdurand/jsonp-callback-validator": "~1.0"
+        "php":                            ">=5.4.0",
+        "psr/log":                        "^1.0",
+        "symfony/framework-bundle":       "^2.7",
+        "symfony/routing":                "^2.7",
+        "doctrine/inflector":             "^1.0",
+        "willdurand/negotiation":         "^1.2",
+        "willdurand/jsonp-callback-validator": "^1.0"
     },
 
     "require-dev": {
-        "sensio/framework-extra-bundle":  "~3.0",
-        "symfony/form":                   "~2.3",
-        "symfony/validator":              "~2.3",
-        "symfony/serializer":             "~2.3",
-        "symfony/yaml":                   "~2.3",
-        "symfony/security":               "~2.3",
-        "symfony/browser-kit":            "~2.3",
-        "symfony/dependency-injection":   "~2.3",
-        "phpoption/phpoption":            "~1.1.0",
-        "jms/serializer":                 "~0.13|~1.0",
-        "jms/serializer-bundle":          "~0.12|~1.0"
+        "sensio/framework-extra-bundle":  "^3.0",
+        "symfony/form":                   "^2.7",
+        "symfony/validator":              "^2.7",
+        "symfony/serializer":             "^2.7",
+        "symfony/yaml":                   "^2.7",
+        "symfony/security":               "^2.7",
+        "symfony/browser-kit":            "^2.7",
+        "symfony/dependency-injection":   "^2.7",
+        "symfony/expression-language":    "~2.7",
+        "symfony/css-selector":           "^2.7",
+        "phpoption/phpoption":            "^1.1",
+        "jms/serializer-bundle":          "^1.0"
     },
 
     "suggest": {
-        "sensio/framework-extra-bundle":  "Add support for route annotations and the view response listener, requires ~3.0",
-        "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires ~0.12||~1.0",
-        "symfony/serializer":             "Add support for basic serialization capabilities and xml decoding, requires ~2.3",
-        "symfony/validator":              "Add support for validation capabilities in the ParamFetcher, requires ~2.3"
+        "sensio/framework-extra-bundle":  "Add support for route annotations and the view response listener, requires ^3.0",
+        "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires ^1.0",
+        "symfony/expression-language":    "Add support for using the expression language in the routing, requires ^2.7",
+        "symfony/serializer":             "Add support for basic serialization capabilities and xml decoding, requires ^2.7",
+        "symfony/validator":              "Add support for validation capabilities in the ParamFetcher, requires ^2.7"
     },
 
-    "conflict": {
-        "symfony/validator": ">=2.5.0,<2.5.5",
-        "jms/serializer": "<0.12",
-        "jms/serializer-bundle": "<0.11"
+    "autoload":{
+        "psr-4":{
+            "FOS\\RestBundle\\": ""
+        }
     },
-
-    "autoload": {
-        "psr-0": { "FOS\\RestBundle": "" }
-    },
-
-    "target-dir": "FOS/RestBundle",
 
     "extra": {
         "branch-alias": {
-            "dev-master": "1.8-dev"
+            "dev-master": "2.0-dev"
         }
     }
 }
