--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/framework-bundle":       "^2.7",
         "symfony/routing":                "^2.7",
         "doctrine/inflector":             "^1.0",
-        "willdurand/negotiation":         "^2.0.0-alpha1",
+        "willdurand/negotiation":         "^2.0",
         "willdurand/jsonp-callback-validator": "^1.0"
     },
 
