--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "symfony/expression-language":    "~2.7",
         "symfony/css-selector":           "^2.7",
         "phpoption/phpoption":            "^1.1",
-        "jms/serializer-bundle":          "^1.0"
+        "jms/serializer-bundle":          "^1.0",
+        "sllh/php-cs-fixer-styleci-bridge": "^1.3"
     },
 
     "suggest": {
