require only needed Symfony security components
FOSRestBundle does not rely on the full Symfony Security component, but
only uses a few classes from the `symfony/security-core` package.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ matrix:
     - php: 5.4
       env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 5.5
-      env: SYMFONY_VERSION='2.8.*@dev symfony/security-acl:2.8.*@dev'
+      env: SYMFONY_VERSION='2.8.*@dev'
     - php: 5.5
-      env: SYMFONY_VERSION='3.0.*@dev symfony/security-acl:3.0.*@dev'
+      env: SYMFONY_VERSION='3.0.*@dev'
 
 before_install:
   - composer self-update
