--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "symfony/dependency-injection":   "~2.3",
         "phpoption/phpoption":            "~1.1.0",
         "jms/serializer":                 "~0.13|~1.0",
-        "jms/serializer-bundle":          "~0.12|~1.0"
+        "jms/serializer-bundle":          "~0.12|~1.0",
+        "sllh/php-cs-fixer-styleci-bridge": "^1.3"
     },
 
     "suggest": {
