--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "symfony/validator":              "^2.7|^3.0",
         "symfony/serializer":             "^2.7|^3.0",
         "symfony/yaml":                   "^2.7|^3.0",
-        "symfony/security-core":          "^2.7|^3.0",
+        "symfony/security-bundle":        "^2.7|^3.0",
         "symfony/browser-kit":            "^2.7|^3.0",
         "symfony/dependency-injection":   "^2.7|^3.0",
         "symfony/expression-language":    "~2.7|^3.0",
