--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ sudo: false
 
 cache:
   directories:
-    - $HOME/.composer/cache
+    - $HOME/.composer/cache/files
 
 branches:
   only:
@@ -24,12 +24,14 @@ branches:
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - env: SYMFONY_VERSION='3.0.*@dev'
   include:
     - php: 5.4
       env: COMPOSER_FLAGS="--prefer-lowest"
-    - php: 5.5
+    - php: 5.6
       env: SYMFONY_VERSION='2.8.*@dev'
-    - php: 5.5
+    - php: 5.6
       env: SYMFONY_VERSION='3.0.*@dev'
 
 before_install:
