--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -15,3 +15,7 @@ test_version2:
     defaults: { _controller: TestBundle:Version:version }
     requirements:
         version: 2.1|3.4.2|2.3
+
+test_param_fetcher:
+    path:     /params
+    defaults: { _controller: TestBundle:ParamFetcher:params }
