--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ php:
 
 sudo: false
 
+env:
+    global:
+        - SYMFONY_DEPRECATIONS_HELPER: weak
+
 cache:
   directories:
     - $HOME/.composer/cache
@@ -35,7 +39,7 @@ matrix:
     - php: 5.5
       env: SYMFONY_VERSION='2.7.*'
     - php: 5.5
-      env: SYMFONY_VERSION='2.8.*@dev symfony/security-acl:2.8.*@dev'
+      env: SYMFONY_VERSION='2.8.*@dev symfony/security-acl:2.8.*@dev' SYMFONY_DEPRECATIONS_HELPER: strict
   allow_failures:
     - php: nightly
 
