--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "symfony/expression-language":    "~2.7|^3.0",
         "symfony/css-selector":           "^2.7|^3.0",
         "phpoption/phpoption":            "^1.1",
-        "jms/serializer-bundle":          "^1.0"
+        "jms/serializer-bundle":          "^1.0",
+        "psr/http-message":               "^1.0"
     },
 
     "suggest": {
