--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: php
 
-env:
-    global:
-        - SYMFONY_DEPRECATIONS_HELPER: weak
-
 php:
   - 5.4
   - 5.5
@@ -26,7 +22,7 @@ matrix:
   fast_finish: true
   include:
     - php: 5.4
-      env: COMPOSER_FLAGS="--prefer-lowest"
+      env: COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 5.6
       env: SYMFONY_VERSION='2.8.*@dev'
     - php: 5.6
