--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,7 @@
         "symfony/css-selector":           "^2.7|^3.0",
         "phpoption/phpoption":            "^1.1",
         "jms/serializer-bundle":          "^1.0",
-        "sllh/php-cs-fixer-styleci-bridge": "^1.3",
-        "psr/http-message":               "^1.0"
+        "sllh/php-cs-fixer-styleci-bridge": "^1.3"
     },
 
     "suggest": {
