--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ matrix:
     - php: 5.4
       env: COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 5.6
-      env: SYMFONY_VERSION='2.8.*@dev'
+      env: SYMFONY_VERSION='2.8.*'
     - php: 5.6
-      env: SYMFONY_VERSION='3.0.*@dev'
+      env: SYMFONY_VERSION='3.0.*'
 
 before_install:
   - composer self-update
