--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "require": {
         "php":                            ">=5.3.9",
         "psr/log":                        "~1.0",
-        "symfony/framework-bundle":       "~2.3",
-        "symfony/http-kernel":            "~2.3,>=2.3.24",
+        "symfony/framework-bundle":       "~2.3|~3.0",
+        "symfony/http-kernel":            "^2.3.24|~3.0",
         "doctrine/inflector":             "~1.0",
         "willdurand/negotiation":         "~1.2",
         "willdurand/jsonp-callback-validator": "~1.0"
@@ -32,14 +32,14 @@
 
     "require-dev": {
         "sensio/framework-extra-bundle":  "~2.0|~3.0",
-        "symfony/form":                   "~2.3",
-        "symfony/validator":              "~2.3",
-        "symfony/serializer":             "~2.3",
-        "symfony/yaml":                   "~2.3",
-        "symfony/security":               "~2.3",
-        "symfony/browser-kit":            "~2.3",
-        "symfony/dependency-injection":   "~2.3",
-        "symfony/phpunit-bridge":         "~2.7",
+        "symfony/form":                   "~2.3|~3.0",
+        "symfony/validator":              "~2.3|~3.0",
+        "symfony/serializer":             "~2.3|~3.0",
+        "symfony/yaml":                   "~2.3|~3.0",
+        "symfony/security":               "~2.3|~3.0",
+        "symfony/browser-kit":            "~2.3|~3.0",
+        "symfony/dependency-injection":   "~2.3|~3.0",
+        "symfony/phpunit-bridge":         "~2.7|~3.0",
         "phpoption/phpoption":            "~1.1.0",
         "jms/serializer":                 "~0.13|~1.0",
         "jms/serializer-bundle":          "~0.12|~1.0",
