--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -23,3 +23,7 @@ test_param_fetcher:
 test_param_fetcher_test:
     path:     /params/test
     defaults: { _controller: TestBundle:ParamFetcher:test }
+
+test_view_response_listener:
+    resource: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\ArticleController
+    type:     rest
