--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "friendsofsymfony/rest-bundle",
     "type": "symfony-bundle",
-    "description": "This Bundle provides various tools to rapidly develop RESTful API's with Symfony2",
+    "description": "This Bundle provides various tools to rapidly develop RESTful API's with Symfony",
     "keywords": ["rest"],
     "homepage": "http://friendsofsymfony.github.com",
     "license": "MIT",
