--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -27,3 +27,7 @@ test_param_fetcher_test:
 test_view_response_listener:
     resource: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\ArticleController
     type:     rest
+
+test_redirect_endpoint:
+    path:     /hello/{name}
+    defaults: { _controller: TestBundle:Article:redirect }
