remove obsolete dependencies

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
         "symfony/routing":                "^2.7|^3.0",
         "doctrine/inflector":             "^1.0",
         "willdurand/negotiation":         "^2.0",
-        "willdurand/jsonp-callback-validator": "^1.0",
-        "phpunit/phpunit": "^5.1"
+        "willdurand/jsonp-callback-validator": "^1.0"
     },
 
     "require-dev": {
