--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ matrix:
       env: SYMFONY_VERSION='2.8.*'
     - php: 7.0
       env: SYMFONY_VERSION='3.0.*'
+    - php: 7.0
+      env: SYMFONY_VERSION='3.1.*@dev'
 
 before_install:
   - if [[ "$TRAVIS_PHP_VERSION" != "5.6" && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then phpenv config-rm xdebug.ini; fi
