--- a/Tests/Fixtures/Etalon/annotated_users_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_users_controller.yml
@@ -1,3 +1,38 @@
+copy_user:
+  methods:    [COPY]
+  path:       /users/{id}.{_format}
+  controller: ::copyUserAction
+
+propfind_user_props:
+  methods:    [PROPFIND]
+  path:       /users/{id}/props/{property}.{_format}
+  controller: ::propfindUserPropsAction
+
+proppatch_user_props:
+  methods:    [PROPPATCH]
+  path:       /users/{id}/props/{property}.{_format}
+  controller: ::proppatchUserPropsAction
+
+move_user:
+  methods:    [MOVE]
+  path:       /users/{id}.{_format}
+  controller: ::moveUserAction
+
+mkcol_users:
+  methods:    [MKCOL]
+  path:       /users.{_format}
+  controller: ::mkcolUsersAction
+
+lock_user:
+  methods:    [LOCK]
+  path:       /users/{slug}.{_format}
+  controller: ::lockUserAction
+
+unlock_user:
+  methods:    [UNLOCK]
+  path:       /users/{slug}.{_format}
+  controller: ::unlockUserAction
+
 get_users:
   path:      /users.{_format}
   controller:   ::getUsersAction
