--- a/Tests/Fixtures/Etalon/annotated_version_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_version_controller.yml
@@ -2,10 +2,16 @@ v1_user:
   path:      /users/v1.{_format}
   controller:   ::v1UserAction
   methods: [GET]
-  condition: "request.attributes.get('version') == ('v1' or 'v3')"
+  condition: "request.attributes.get('version') in ['v1','v3']"
 
 conditional_user:
   path:      /users/conditional.{_format}
   controller:   ::conditionalUserAction
   methods: [GET]
-  condition: "(context.getMethod() in ['GET', 'HEAD'] and request.headers.get('User-Agent') matches '/firefox/i') and request.attributes.get('version') == ('v1' or 'v3')"
+  condition: "(request.attributes.get('version') in ['v1','v3']) and (context.getMethod() in ['GET', 'HEAD'] and request.headers.get('User-Agent') matches '/firefox/i')"
+
+v3_user:
+  path:     /users/v3.{_format}
+  controller:   ::v3UserAction
+  methods: [GET]
+  condition: "request.attributes.get('version') in ['v1','v3']"
