--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -14,7 +14,12 @@ test_serializer_error_invalid_form:
     path:     /serializer-error/invalid-form.{_format}
     defaults: { _controller: TestBundle:SerializerError:invalidForm }
 
+# Must be defined before test_version
 test_version2:
+  resource: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\Version2Controller
+  type: rest
+
+test_version:
     path: /version
     defaults: { _controller: TestBundle:Version:version }
     requirements:
