--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
     - php: 7.0
       env: SYMFONY_VERSION='3.0.*'
     - php: 7.0
-      env: SYMFONY_VERSION='3.1.*@dev'
+      env: SYMFONY_VERSION='3.1.*'
 
 before_install:
   - if [[ "$TRAVIS_PHP_VERSION" != "5.6" && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then phpenv config-rm xdebug.ini; fi
