--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,7 @@
         "symfony/expression-language":    "~2.7|^3.0",
         "symfony/css-selector":           "^2.7|^3.0",
         "phpoption/phpoption":            "^1.1",
-        "jms/serializer-bundle":          "^1.0",
-        "sllh/php-cs-fixer-styleci-bridge": "^1.3"
+        "jms/serializer-bundle":          "^1.0"
     },
 
     "suggest": {
