--- a/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
+++ b/Tests/Functional/Bundle/TestBundle/Resources/config/routing.yml
@@ -28,6 +28,18 @@ test_param_fetcher_test:
     path:     /params/test
     defaults: { _controller: TestBundle:ParamFetcher:test }
 
+test_param_fetcher_file_test:
+    path:     /file/test
+    defaults: { _controller: TestBundle:ParamFetcher:singleFile }
+
+test_param_fetcher_file_collection_test:
+    path:     /file/collection/test
+    defaults: { _controller: TestBundle:ParamFetcher:fileCollection }
+
+test_param_fetcher_image_collection_test:
+    path:     /image/collection/test
+    defaults: { _controller: TestBundle:ParamFetcher:imageCollection }
+
 test_view_response_listener:
     resource: FOS\RestBundle\Tests\Functional\Bundle\TestBundle\Controller\ArticleController
     type:     rest
