--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ matrix:
     - php: 7.0
       env: SYMFONY_VERSION='2.8.*'
     - php: 7.0
+      env: SYMFONY_VERSION='3.1.*'
+    - php: 7.0
       env: SYMFONY_VERSION='3.2.*'
 
 before_install:
