--- a/Tests/Fixtures/Etalon/annotated_version_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_version_controller.yml
@@ -15,3 +15,9 @@ v3_user:
   controller:   ::v3UserAction
   methods: [GET]
   condition: "request.attributes.get('version') in ['v1', 'v3']"
+
+get_users:
+  path:      /{version}/users.{_format}
+  controller:   ::getUsersAction
+  requirements: {version: 'v1|v3'}
+  methods: [GET]
