--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ php:
   - 5.5
   - 5.6
   - 7.0
-  - 7.1
   - hhvm
 
 sudo: false
@@ -30,11 +29,16 @@ matrix:
       env: SYMFONY_VERSION='3.1.*'
     - php: 7.0
       env: SYMFONY_VERSION='3.2.*'
+    - php: 7.0
+      env: SYMFONY_VERSION='3.4.*'
+    - php: 7.1
+      env: SYMFONY_VERSION='4.0.*'
 
 before_install:
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpenv config-rm xdebug.ini; fi
+  - if [ "$SYMFONY_VERSION" == "4.0.*" ]; then composer remove --dev --no-update jms/serializer-bundle; fi
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
 
-install: composer update $COMPOSER_FLAGS --prefer-dist
+install: composer update $COMPOSER_FLAGS --prefer-dist --prefer-stable
 
 script: ./phpunit
