--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,21 @@ matrix:
     - php: 5.5
       env: COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 5.6
+    # Symfony 2 LTS
     - php: 7.0
-      env: SYMFONY_VERSION='2.8.*'
+      env: SYMFONY_LTS='^2'
+    # Symfony 3 LTS
     - php: 7.0
-      env: SYMFONY_VERSION='3.4.*'
+      env: SYMFONY_LTS='^3' DEPENDENCIES='dev'
+    # development dependencies
     - php: 7.1
-      env: SYMFONY_VERSION='4.0.*'
+      env: DEPENDENCIES='dev'
 
 before_install:
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpenv config-rm xdebug.ini; fi
-  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
+  - if [ "$DEPENDENCIES" != "" ]; then composer config minimum-stability $DEPENDENCIES; fi
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/lts=$SYMFONY_VERSION; fi
 
-install: composer update $COMPOSER_FLAGS --prefer-dist --prefer-stable
+install: composer update $COMPOSER_FLAGS --prefer-dist
 
 script: ./phpunit
